Add advancement and progression rules

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,13 @@
                     <h2 class="test">
                         Advancement and progression
                     </h2>
-                    <p class="text-start"></p>
+                    <p class="text-start">Characters gain experience, and levels, in a variey of ways: first and foremost, every member of the part gains 5 experience upon the successful completion of an adventure - whether that adventure is a delve into a dungeon, a heist, an assault against an enemy fort, or a high-stakes dinner party with a colony of vampires, whoever comes out the other side will have 5 experience in addition to whatever they may have picked up along the way.
+                      This leads up to other sources of experience: perhaps the party was asked by a contact to keep an eye out for a particular artifact when delving into that dungeon, or maybe they decide to save the dinner at that vampire dinner party, or eliminate some records of debts during that heist - there are many ways to gain just a bit of extra experience, from 1 or 2 points for a relatively easy, along-the-way, task, all the way to a whole extra 5 points for a task that may have been an adventure on its own.
+                    </p>
+                    <p>Once a character gains 10 experience, they level up. </p>
+                    <p>At each level, including level 1, a character gains 10 hit points.</p>
+                    <p>At level 2 and every 2 levels thereafter, a character will gain an additional mutation - either in a slot where they didn't have one, or replacing a previous one. Instead of acquiring a new mutation, an existing mutation may instead be enhanced, if the character has mutations with potential enhancements.</p>
+                    <p>At level 5 and every 5 levels thereafter, a character gains two attribute increases - one that may go to any attribute, and one that can only go to an attribute that has a value of less than 15.</p>
                 </div>
             </div>
         </div>
