--- a/public/mutations.html
+++ b/public/mutations.html
@@ -26,6 +26,9 @@
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <div class="container-fluid">
                 <a href="/" class="navbar-brand test">Monstrous Soul</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#site-nav" aria-controls="site-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
                 <div class="collapse navbar-collapse" id="site-nav">
                     <div class="navbar-nav">
                         <a class="nav-link active" href="./mutations.html">Mutations</a>
@@ -43,14 +46,14 @@
                 <p>Equal parts magic items and class features, mutations define what makes you different from other adventurers - they may grant you special abilities not possible otherwise, they may enhance or penalize other abilities, and they might not do anything at all except make you a little bit less human, and that might be all you need.</p>
                 <br>
                 <p>Mutations fit into "slots" - mutating what's already been mutated is a recipe for disaster, and while that might be what you want, those you travel with might prefer that you don't deteriorate into a horrific abomination of flesh and magic, driven by an endless maddening hunger. Or they might be cool with that, ask them first. If you want to play it safe, here are the slots:</p>
-                <ul class="list-group list-group-horizontal justify-content-center">
-                    <li class="list-group-item mx-2">Head</li>
-                    <li class="list-group-item mx-2">Face</li>
-                    <li class="list-group-item mx-2">Body</li>
-                    <li class="list-group-item mx-2">Back</li>
-                    <li class="list-group-item mx-2">Arms</li>
-                    <li class="list-group-item mx-2">Legs</li>
-                    <li class="list-group-item mx-2">Magic</li>
+                <ul class="list-group list-group-horizontal-md justify-content-center">
+                    <li class="list-group-item bg-dark text-light mx-2 my-2">Head</li>
+                    <li class="list-group-item bg-dark text-light mx-2 my-2">Face</li>
+                    <li class="list-group-item bg-dark text-light mx-2 my-2">Body</li>
+                    <li class="list-group-item bg-dark text-light mx-2 my-2">Back</li>
+                    <li class="list-group-item bg-dark text-light mx-2 my-2">Arms</li>
+                    <li class="list-group-item bg-dark text-light mx-2 my-2">Legs</li>
+                    <li class="list-group-item bg-dark text-light mx-2 my-2">Magic</li>
                 </ul>
                 <br>
                 <p>Additionally, mutations have different origins - while mutations within a single origin tend to work together well, forming a sort of approximation of a character class, there is no restriction on mixing and matching.</p>
