--- a/public/spellcasting.html
+++ b/public/spellcasting.html
@@ -26,6 +26,9 @@
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <div class="container-fluid">
                 <a href="/" class="navbar-brand test">Monstrous Soul</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#site-nav" aria-controls="site-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
                 <div class="collapse navbar-collapse" id="site-nav">
                     <div class="navbar-nav">
                         <a class="nav-link" href="./mutations.html">Mutations</a>
